--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Centralized info on local fires, sourced from IQAir, local news stations, and tweets from neighbors in your community. ❤️"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/fire-talk-icon.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -27,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Fire Talk</title>
+    <title>fire talk</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
