Feature: Twitter Summary Cards

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@firetalkteam">
+    <meta name="twitter:title" content="fire talk - AQI, Tweets, Articles">
+    <meta name="twitter:description" content="Centralized info on local fires, sourced from IQAir, local news stations, and tweets from neighbors in your community. ❤️">
+    <meta name="twitter:image" content="http://firetalk.io/twitter-preview.png">
+
     <meta
       name="description"
       content="Centralized info on local fires, sourced from IQAir, local news stations, and tweets from neighbors in your community. ❤️"
