--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <meta name="twitter:site" content="@firetalkteam">
     <meta name="twitter:title" content="fire talk - AQI, Tweets, Articles">
     <meta name="twitter:description" content="Centralized info on local fires, sourced from IQAir, local news stations, and tweets from neighbors in your community. ❤️">
-    <meta name="twitter:image" content="https://pbs.twimg.com/card_img/1359178967446663170/zUipp0W3?format=jpg&name=900x900">
+    <meta name="twitter:image" content="https://firetalk.io/preview-1200-600.png">
 
     <meta
       name="description"
